@@ -1,0 +1,27 @@
+import os
+
+DIRNAME = os.path.dirname(__file__)
+
+DEBUG = True
+
+DATABASE_ENGINE = 'sqlite3'
+DATABASE_NAME = os.path.join(DIRNAME, 'mptt.db')
+
+#DATABASE_ENGINE = 'mysql'
+#DATABASE_NAME = 'mptt_test'
+#DATABASE_USER = 'root'
+#DATABASE_PASSWORD = ''
+#DATABASE_HOST = 'localhost'
+#DATABASE_PORT = '3306'
+
+#DATABASE_ENGINE = 'postgresql_psycopg2'
+#DATABASE_NAME = 'mptt_test'
+#DATABASE_USER = 'postgres'
+#DATABASE_PASSWORD = ''
+#DATABASE_HOST = 'localhost'
+#DATABASE_PORT = '5432'
+
+INSTALLED_APPS = (
+    'mptt',
+    'mptt.tests',
+)
